--- a/.github/js practice/index.html
+++ b/.github/js practice/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="dom-manipulation.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <!-- <script src="dom-manipulation.js" defer></script> -->
 </head>
 <body>
-    <h1>
-      THE TITLE OF YOUR WEBPAGE
-    </h1>
-    <div id="container">
-        <div class="content">
-        This is the glorious text-content!
-      </div>
-    </div>
-  </body>
+  <div class="grid-main">
+    <div class="head">HEADER</div>
+    <div class="side">SIDEBAR</div>
+    <div class="nav">NAVIGATION</div>
+    <div class="article">ARTICLE</div>
+    <div class="foot">FOOTER</div>
+  </div>
+</body>
 </html>
 
